# dbdd

./: README.txt  setup.cfg  setup.py
dbdd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: example.py  setprefix.py
src/dbdd/: __init__.py  dbdd.py
src/dbdd.egg-info/: SOURCES.txt  top_level.txt
tests/: test.py
