[metadata]
name = dbdd
version = 0.0.1
author = BambiKu
author_email = bambikuuu@gmail.com
description = Useful Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bambikuu/dbdd
project_urls =
    Bug Tracker = https://github.com/bambikuu/dbdd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src